--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="es">
 <head>
   <meta charset="UTF-8" />
-  <title>SN</title>
+  <title>PAGE</title>
   <style>
     body { font-family: Arial; padding: 20px; background: #f0f0f0; }
     .box { background: white; padding: 20px; border-radius: 8px; box-shadow: 0 0 10px rgba(0,0,0,0.1); max-width: 700px; margin: auto; text-align: center; }
@@ -12,8 +12,8 @@
 </head>
 <body>
   <div class="box" id="mainBox">
-    <h2>Haz click en el boton para mostrar la imagen de un mate</h2>
-    <button id="startBtn">Mostrar Mate</button>
+    <h2>Aprieta el boton y espera 5 segundos</h2>
+    <button id="startBtn">Dame Click</button>
   </div>
 
 <script>
