--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="es">
 <head>
   <meta charset="UTF-8" />
-  <title>Test</title>
+  <title>Tes1t</title>
   <style>
     body {
       font-family: Arial;
